tests/sksl/errors/golden/IntFloatMismatch.glsl
### Compilation failed:

error: 12: type mismatch: '=' cannot operate on 'int', 'float'
error: 13: type mismatch: '=' cannot operate on 'int', 'float'
2 errors
